--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -1,1 +1,8 @@
-<p>menu works!</p>
+<ol class="list-group">
+    <li *ngFor="let item of menu"
+        class="list-group-item"
+        [routerLink]="[item.ruta]"
+        routerLinkActive="active">
+        {{ item.texto }}
+    </li>
+</ol>
