--- a/src/app/graficas/pages/dona/dona.component.html
+++ b/src/app/graficas/pages/dona/dona.component.html
@@ -1,1 +1,4 @@
-<p>dona works!</p>
+<!-- <canvas baseChart class="chart"
+        [data]="doughnutChartData"
+        [type]="doughnutChartType">
+</canvas> -->
