--- a/src/app/graficas/components/graficas-barra/graficas-barra.component.html
+++ b/src/app/graficas/components/graficas-barra/graficas-barra.component.html
@@ -1,1 +1,9 @@
-<p>graficas-barra works!</p>
+<div style="display: block">
+  <canvas baseChart
+          [data]="barChartData"
+          [options]="barChartOptions"
+          [type]="barChartType"
+          (chartHover)="chartHovered($event)"
+          (chartClick)="chartClicked($event)">
+  </canvas>
+</div>
